[package]
name = "hf-hub-loader"
version = "0.1.0"
authors = ["philschmid <schmidphilipp1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4",features = ["json"]}
tokio = { version = "1.8.1", features = ["full"] }
error-chain = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
structopt = "0.3"
